Automatize GTest Usage

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,10 @@
 *.app
 bin/
 .idea/
+
+# cmake build directories
 cmake-build-debug/
+cmake-build-default/
+cmake-build-minsizerel/
+cmake-build-release/
+cmake-build-relwithdebinfo/
